2000-08-07  Lauris Kaplinski  <lauris@helixcode.com>

	* configure.in: Require gnome-print >= 0.21

	* glade/text-dialog.glade: New layout, suitable for gnome-font-selection

	* src/Makefile.am: Add libunicode

	* src/sp-chars.h:
	* src/sp-chars.c:
	* src/sp-text.h:
	* src/sp-text.c: Use gnome-font instead of wrapper

	* src/dialogs/text-edit.c: Use new GnomeFontSelection and GnomeFontPreview
	
2000-08-03  Michael Meeks  <michael@helixcode.com>

	* configure.in: update for BonoboX

2000-07-01  Lauris Kaplinski  <lauris@helixcode.com>

	* src/sp-namedview.c (and everywhere else): Guides are visible,
	  although not functional yet.

	* src/desktop.c (sp_desktop_new): Use document + namedview
	  combination for creating desktop.

2000-07-01  Lauris Kaplinski  <lauris@helixcode.com>

	* src/file.c (sp_do_file_print_preview): Don't use FRGBA, as
	  print preview can handle alpha itself

	* src/sp-object-group.h
	* src/object-group.c: Added SPObjectGroup to handle groups of
	  invisible objects (such as NamedViews)

	* src/sp-namedview.h:
	* src/sp-namedview.c: Extends SPObjectGroup

	* src/xml/sp-repr.c (sp-repr-destroy): fix hash table destroy

2000-06-21  Chema Celorio  <chema@celorio.com>

	* src/file.c (sp_do_file_print_preview): added print preview
	stuff. new function
	(sp_print_preview_destroy_cb): new function
	(sp_file_print_preview): new function
	modified the menu to include a print preview item

2000-06-21  Lauris Kaplinski  <lauris@helixcode.com>

	* src/selection.c (sp_selection_update_statusbar): Added original
	  idea of printing sp_image_description (), if single item is
	  selected

	* glade/*.xpm: Jeff's icons. I need to find a way to use png
	  variants, xpm sucks

2000-06-21  Chema Celorio  <chema@celorio.com>

	* src/desktop.c (sp_desktop_set_status): it was #if'ed out,
	reenabel it.

	* src/selection.c (SP_SELECTION_C): added debug messages and macro
	If lauris does not like them I will take them away.