@@ -1,0 +1,31 @@
+/* XPM */
+static char * curve_xpm[] = {
+"24 24 4 1",
+" 	c #FFFFFF",
+".	c None",
+"+	c #0000BD",
+"@	c #000000",
+"................++++++++",
+"................++++++++",
+"................++....++",
+".........@@@@@@@++....++",
+".......@@@@@@@@@++....++",
+"......@@@@......++....++",
+".....@@@........++++++++",
+".....@@.........++++++++",
+"....@@@.................",
+"....@@..................",
+"...@@@..................",
+"...@@...................",
+"...@@...................",
+"...@@...................",
+"...@@...................",
+"...@@...................",
+"++++++++................",
+"++++++++................",
+"++....++................",
+"++....++................",
+"++....++................",
+"++....++................",
+"++++++++................",
+"++++++++................"};
