@@ -1,0 +1,31 @@
+/* XPM */
+static char * smooth_xpm[] = {
+"24 24 4 1",
+" 	c #FFFFFF",
+".	c None",
+"+	c #000000",
+"@	c #0000BD",
+"........................",
+"........................",
+".......................+",
+".......................+",
+"+......................+",
+"+.....................+.",
+"+.....................+.",
+".+...................+..",
+".+...................+..",
+"..+.................+...",
+"..+................+....",
+"...+..@@@@@@@.....+.....",
+"....+.@@@@@@@...++......",
+"+++..+@@...@@.++.....+++",
+"+.+@@@@@...@@@@@@@@@@+.+",
+"+++...@@...@@........+++",
+"......@@@@@@@...........",
+"......@@@@@@@...........",
+"........................",
+"........................",
+"........................",
+"........................",
+"........................",
+"........................"};
