@@ -1,3 +1,11 @@
+2000-08-09  Lauris Kaplinski  <lauris@helixcode.com>
+
+	* glade/*.xpm: Added Frank Felfe's node editing icons and node dialog
+
+	* src/sp-ellipse.c (sp_ellipse_description): return "Ellipse"
+
+	* src/sp-text.c (sp_text_description): Return either contents or "Text" if NULL
+
 2000-08-07  Lauris Kaplinski  <lauris@helixcode.com>
 
 	* configure.in: Require gnome-print >= 0.21
